# OOP_MAI_LAB2

./: .gitignore  CMakeLists.txt  README.md
include/: Vector.h  decimal.h
src/: decimal.cpp  main.cpp  vector.cpp
test/: test_decimal.cpp
